# lightwarelidar

./: CMakeLists.txt  README.md  package.xml
include/: common.h  lwNx.h  lwSerialPort.h
include/linux/: lwSerialPortLinux.h  platformLinux.h
src/: lwNx.cpp  sf40c.cpp  sf45b.cpp
src/linux/: lwSerialPortLinux.cpp  platformLinux.cpp
